<resources>
    <string name="app_name"> MEDI PLUS </string>

    //main page
    <string name="title_Main_page">Drug Details</string>
    <string name="alarm_detail_main"> Alarm </string>
    <string name="search_drug_main"> Search for Medicines </string>
    <string name="shop_for_medicine"> Shop for Medicine </string>
    <string name="Before_food_medicine"> Before Food Medicine </string>
    <string name="After_food_medicine"> After Food Medicine </string>
    <string name="app_msg">TAKE MEDICINE ON TIME</string>

    //Add Drug details page
    <string name="Add_drug_details"> Add Drug Details </string>
    <string name="drug_name"> Drug Name </string>
    <string name="drug_description"> Description </string>
    <string name="drug_price"> Price </string>
    <string name="save_drug"> Save </string>
    <string name="drug_type"> Type </string>
    <string-array name="type">
        <item> TYPE </item>
        <item> Tablet </item>
        <item> Capsule </item>
        <item> Syrup </item>
        <item> Injection </item>
    </string-array>

    <string name="Instructions"> Instructions </string>
    <string-array name="instruction">
        <item> INSTRUCTION </item>
        <item> Before Food </item>
        <item> After Food </item>
        <item> During Meals </item>
        <item> Anytime </item>
    </string-array>

    //Drug data
    <string name="Title_drugdata"> Drug Data </string>
    <string name="menu_goto_homepage"> Home </string>
    <string name="menu_share"> Share </string>
    <string name="menu_edit"> Edit </string>
    <string name="type_of_drug"> Category </string>
    <string name="radio_generic"> Generic </string>
    <string name="radio_specific"> Specific </string>


    //Alarm Activity
    <string name="menu_alarm_list"> Alarm List </string>
    <string name="Alarm_Title"> Add Alarm </string>
    <string name="Alarm_name"> Alarm name </string>
    <string name="Add_Medicine_name"> Add </string>
    <string name="Everyday"> Everyday </string>
    <string name="One_time_alarm"> One time </string>
    <string name="set_start_date"> Set Start date </string>
    <string name="End_Date"> End Date </string>
    <string name="Radio_date_always"> Everyday </string>
    <string name="Radio_date_select"> Select date </string>
    <string name="set_date"> Set Date </string>
    <string name="set_time"> Set Time </string>
    <string name="set_alarm"> Set Alarm </string>
    <string name="cancel_alarm"> Cancel </string>
    <string name="btn_ok"> OK </string>
    <string name="btn_cancel"> Cancel </string>

    //Alarm Information Activity
    <string name="Alarm_info_title"> Alarm Information </string>
    <string name="subtitle_alarmname"> Alarm name </string>
    <string name="alarm_message">Message - </string>
    <string name="subtitle_date"> Date </string>
    <string name="subtitle_time"> Time </string>

    //Search Dialog
    <string name="search_name"> Name of the Drug </string>

    //Edit Drug Data
    <string name="Title_Edit_data"> Edit Drug Data </string>
    <string name="btn_save"> Save </string>

    //shopping for medicine
    <string name="title_shop_medicine">Shop For Medicines</string>
    <string name="Link_name"> Enter the url here </string>
    <string-array name="website">
        <item> www.1mg.com </item>
        <item> www.apollopharmacy.in </item>
        <item> www.buydrug.in </item>
        <item> www.easymedico.com </item>
        <item> www.healthkart.com </item>
        <item> www.medlife.com </item>
        <item> www.medplusmart.com </item>
        <item> www.medimart.com </item>
        <item> www.netmeds.com </item>
        <item> www.pharmeasy.in/ </item>
        <item> www.pharmeasy.in/ </item>
        <item> www.pharmacyonnet.com </item>
        <item> www.practo.com </item>
        <item> www.speedmedicine.com </item>
    </string-array>
    <string name="Add_button"> Add </string>

    <string name="delete_all"> Delete </string>

    <string name="search_shop_text"> Search Medicine on Web </string>
    <string name="search_google"> Search </string>

    //pharmacy activity
    <string name="pharmacy_title"> Pharmacy Phonebook </string>
    <string name="Address_tv"> Address :</string>
    <string name="Pharmacy_name"> Pharmacy Name </string>
    <string name="Pharmacy_number"> Pharmacy Phone no </string>
    <string name="Pharmacy_address"> Pharmacy Address </string>

    //Login
    <string name="title_login">Login</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="Login_btn">Login</string>

    //Register dialog
    <string name="username">User Name</string>
    <string name="pass">Password</string>
    <string name="btn_reg">Register</string>
    <string name="skip">skip</string>
    <string name="name">NAME</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="home">HOME</string>
    <string name="save">SAVE</string>
    <string name="add_alarm">ADD</string>
    <string name="shopping">SHOP</string>
    <string name="pharmacy_phonebook">Pharmacy Phonebook</string>
    <string name="logout">Logout</string>
    <string name="alarmlist">Alarm List</string>

</resources>
