<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.tech.gigabyte.mediplus.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15sp"
        android:background="@drawable/login_style">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:layout_marginTop="20sp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/title_login"
            android:textAllCaps="true"
            android:textColor="#323a3d"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/et_UID"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@+id/txt_login"
            android:layout_margin="10sp"
            android:cursorVisible="false"
            android:drawableLeft="@drawable/ic_user_id"
            android:drawableStart="@drawable/ic_user_id"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingRight="50sp"
            android:textSize="@dimen/text_size_each_row"
            tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/et_PASS"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@+id/et_UID"
            android:layout_margin="10sp"
            android:cursorVisible="false"
            android:drawableLeft="@drawable/ic_pass_key"
            android:drawableStart="@drawable/ic_pass_key"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingRight="50sp"
            android:textSize="@dimen/text_size_each_row"
            tools:targetApi="jelly_bean" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_PASS"
            android:layout_marginTop="50sp"
            android:background="@drawable/login_style"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:background="@drawable/capsule_style"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/Login_btn"
                android:textColor="#ffff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />

            <Button
                android:id="@+id/btn_register"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:background="@drawable/cap_style"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/btn_reg"
                android:textColor="#ffff"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="jelly_bean" />

        </LinearLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20sp"
            android:autoLink="phone"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="#2d8f9e"
            android:textSize="@dimen/text_size_each_row"
            android:textStyle="bold"
            tools:targetApi="lollipop" />
    </RelativeLayout>

</LinearLayout>
