<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"
        android:hint="@string/search_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/capsule_style"
            android:text="@string/btn_ok"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/cap_style"
            android:text="@string/btn_cancel"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>