<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_drug_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.tech.gigabyte.mediplus.EditActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/add_detail_image"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:elevation="15sp"
        android:src="@drawable/ic_action_edit"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="50sp"
        android:background="@drawable/login_style"
        android:elevation="10sp"
        android:orientation="vertical"
        tools:targetApi="lollipop">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/drug_name"
                android:textColor="#323a3d"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="4"
                android:fontFamily="sans-serif-condensed"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/drug_description"
                android:textColor="#323a3d"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="4"
                android:fontFamily="sans-serif-condensed"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/drug_price"
                android:textColor="#323a3d"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="4"
                android:fontFamily="sans-serif-condensed"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/type_of_drug"
            android:textColor="#323a3d"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_cat"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/r_generic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginStart="30sp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/radio_generic"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/r_specific"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/radio_specific"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/s_type"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginLeft="30sp"
                android:layout_marginStart="30sp"
                android:layout_weight="0.5"
                android:background="@drawable/capsule_style"
                android:dropDownWidth="match_parent"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/s_info"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginEnd="30sp"
                android:layout_marginRight="30sp"
                android:layout_weight="0.5"
                android:background="@drawable/cap_style"
                android:dropDownWidth="match_parent"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
